# nrf52_rust_primer

./: .gitmodules  Cargo.toml  build.rs
.cargo/: config.toml
memory/: memory_ble.x  memory_default.x
src/: blinky.rs  bme680_read.rs  chip_read.rs  i2c_scan.rs  lib.rs
src/lib/: bme680.rs  chip.rs  chip_implementations.rs  dlogger.rs  led.rs  nrf_ble.rs
src/lib/ble/: ble_services.rs  nrf_ble.rs
src/lib/d_ble/: Cargo.toml  nrf_ble.rs
src/lib/d_log/: Cargo.toml  dlogger.rs
src/lib/d_peripherals/: Cargo.toml  chip.rs  chip_implementations.rs
src/lib/d_peripherals/sensors/bme680/: bme680.rs
src/lib/peripherals/: chip.rs  chip_implementations.rs
src/lib/peripherals/sensors/: sensor_updates.rs
src/lib/peripherals/sensors/bme680/: bme680.rs
src/lib/system/: ble_services.rs  sensor_updates.rs  state.rs
system_fw/: flash_device.sh
