[package]
edition = "2024"
name = "nrf52_rust_primer"

[features]
# For HAL Library
default = ["nrf", "default_memory"]     # Default features
nrf = ["embassy-nrf"]
stm32 = ["embassy-stm32"]

# For Memory
default_memory = []                     # When the brackets have no contents, it's just a switch to be used in build.rs
ble_memory = []

[profile.dev]
debug = 2
opt-level = 1

[profile.release]
debug = 2

[[bin]]
name = "bme680_ble_notify"
path = "src/bin/bme680_ble_notify.rs"
required-features = ["ble_memory"]

[dependencies]

# Low level ARM Cortex-M CPU crates
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"

# Basic embassy libraries
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.8.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time", "net-driver"], optional = true}
embassy-stm32 = { version = "0.4.0", features = ["defmt", "stm32f411ce", "time-driver-any", "exti", "unstable-pac", "time"], optional = true}
embassy-hal-internal = { version = "0.3.0" }

# Logging libraries
defmt = "1.0.1"           # Logging framework
defmt-rtt = "1.0.0"       # Logging over RTT (Real-Time Transfer)

# Memory and string libraries
static_cell = { version = "2" }     # Create static memory initialized at runtime
heapless = "0.8"                    # Gives basic data structures that don't use a heap - string is used for BME680

# Lookup Tables
phf = { version = "0.11", default-features = false }
phf_macros = { version = "0.11", default-features = false }